# acp_submission_3

./: .gitignore  Untitled Diagram.drawio  docker-compose.yml
acp-cw3/: pyproject.toml
acp-cw3/script/: demo1.py
acp-cw3/src/acp_cw3/: config.py  main.py
acp-cw3/src/acp_cw3/services/: cache_tools.py  kafka_events.py  mcp_client.py
acp-cw3/src/acp_cw3/services/llm/: cached_chat.py  chat.py  client.py  resilient_chat.py  simple_chat.py  tool_registry.py
acp-cw3/src/acp_cw3/tools/: db_lookup.py  weather.py
acp-cw3/util/employee_db/: populate.py  test_connection.py
acp-cw3/util/ollama/: test_connection.py
acp-gpt/: Dockerfile  pyproject.toml
acp-gpt/src/acp_gpt/: config.py  main.py
acp-gpt/src/acp_gpt/controller/: chat_cached.py  chat_simple.py  chat_tool.py
acp-gpt/src/acp_gpt/service/: kafka_client.py  kafka_consumer.py  llm_client.py  mcp_client.py  redis_client.py
acp-gpt/src/acp_gpt/service/chat/: cached.py  simple.py  tool.py
acp-mcp-server/: Dockerfile  pyproject.toml
acp-mcp-server/src/acp_mcp_server/: config.py  kafka_consumer.py  main.py
acp-mcp-server/src/acp_mcp_server/tools/: db_lookup.py  weather.py
util/employee_db/: postgres_cfg.py
util/ollama/: test_connection.py
util/redis/: test_connections.py
