[project]
name = "acp-cw3"
version = "0.1.0"
description = "ACP Coursework 3"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "redis",
    "kafka-python-ng",
    "requests",
    "mcp[cli]",
]

[project.scripts]
acp-cw3 = "acp_cw3.main:start"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]