[project]
name = "acp-gpt"
version = "0.1.0"
description = "ACP CW3 GPT services"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "redis",
    "kafka-python-ng",
    "requests",
    "mcp[cli]",
]

[project.scripts]
acp-gpt = "acp_gpt.main:start"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]